# wasm-xnnpack

./: .gitignore  CMakeLists.txt  CMakeLists_xnnpack.txt  LICENSE  README.md  build.sh  gen.py  main.cpp  wasm_source.txt
cmake/: xnnpack.cmake
